--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@
 spring.application.name=supermarket
 # 应用服务 WEB 访问端口
 server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/shopping?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/yaofeihu?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123
+#spring.datasource.password=123
 
 #Spring boot视图配置
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
 #static-locations: classpath:/templates
-mybatis:
 mybatis.type-aliases-package=com.ma.supermarket.bean
 mybatis.mapper-locations=classpath:com/ma/supermarket/mapper/*.xml
+
+# 打印mybatis
+logging.level.com.ma.supermarket.mapper=debug
 
 
